# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-02-01 16:07:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-49

    Summary:
      More gzip test fixes
    Revision:
      missingexts--head--0.7--patch-49


    modified files:
     ChangeLog testsrc/GZiptest.hs


2005-02-01 16:07:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-48

    Summary:
      More gzip test fixes
    Revision:
      missingexts--head--0.7--patch-48


    modified files:
     ChangeLog testsrc/GZiptest.hs


2005-02-01 16:06:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-47

    Summary:
      Checkpointing working gzip tests
    Revision:
      missingexts--head--0.7--patch-47


    modified files:
     ChangeLog testsrc/GZiptest.hs


2005-02-01 16:05:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-46

    Summary:
      Checkpointing working gzip tests
    Revision:
      missingexts--head--0.7--patch-46


    modified files:
     ChangeLog Python/Exceptions.hs Python/Objects/File.hs
     testsrc/GZiptest.hs


2005-02-01 03:52:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-45

    Summary:
      GZip works
    Revision:
      missingexts--head--0.7--patch-45


    new files:
     testsrc/GZiptest.hs

    modified files:
     ChangeLog Makefile MissingPy/FileArchive/GZip.hs
     Python/Objects/File.hs testsrc/Tests.hs


2005-02-01 03:13:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-44

    Summary:
      Added GZip
    Revision:
      missingexts--head--0.7--patch-44


    new files:
     MissingPy/.arch-ids/=id MissingPy/FileArchive/.arch-ids/=id
     MissingPy/FileArchive/GZip.hs

    modified files:
     ChangeLog MissingPy.cabal Python/Objects/File.hs

    new directories:
     MissingPy MissingPy/.arch-ids MissingPy/FileArchive
     MissingPy/FileArchive/.arch-ids


2005-02-01 03:02:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-43

    Summary: